# zeconfig

./: 404.html  README.md  README_BR.md  index.html  objects.inv
.github/workflows/: release.yml  zconf-build.yml  zconf-tests.yml
config_parser_model/: index.html
core/: index.html
env_parser_model/: index.html
index_br/: index.html
json_parser_model/: index.html
main/: index.html
manager/: index.html
parser_factory/: index.html
search/: search_index.json
settings/: index.html
toml_parser_model/: index.html
yaml_parser_model/: index.html
ze/: mkdocs.yml  pyproject.toml  requirements.txt  requirements_dev.txt
ze/docs/: config_parser_model.md  core.md  env_parser_model.md  index.md  json_parser_model.md  main.md  manager.md  parser_factory.md  settings.md  toml_parser_model.md  yaml_parser_model.md
ze/tests/: conftest.py  test_core.py  test_models.py  test_models_config_gen.py
ze/ze/: __init__.py
ze/ze/src/: __init__.py  cli.py  core.py  models.py  settings.py  utils.py
